--- a/StoryPrompt/Base.lproj/Main.storyboard
+++ b/StoryPrompt/Base.lproj/Main.storyboard
@@ -79,6 +79,9 @@
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="7" minValue="5" maxValue="10" minimumValueImage="5.circle" catalog="system" maximumValueImage="10.circle" translatesAutoresizingMaskIntoConstraints="NO" id="mwb-Xs-zj6">
                                         <rect key="frame" x="-2" y="210.5" width="378" height="31"/>
                                         <color key="tintColor" systemColor="labelColor"/>
+                                        <connections>
+                                            <action selector="changeNumber:" destination="BYZ-38-t0r" eventType="valueChanged" id="e57-kC-Ysx"/>
+                                        </connections>
                                     </slider>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Picture" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2N6-vB-dEq">
                                         <rect key="frame" x="0.0" y="262.5" width="374" height="20.5"/>
@@ -116,6 +119,13 @@
                             <constraint firstItem="Ih7-Yv-o83" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="57" id="hkT-I1-0jQ"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="adjectiveTextField" destination="OjW-l3-BEU" id="Q6c-IA-kHy"/>
+                        <outlet property="nounTextField" destination="hZ4-4p-Q5R" id="97a-uo-gT2"/>
+                        <outlet property="numberLabel" destination="69z-YX-rWc" id="G8g-Se-DbK"/>
+                        <outlet property="numberSlider" destination="mwb-Xs-zj6" id="TVc-m2-Qgw"/>
+                        <outlet property="verbTextField" destination="3h1-Pk-9ST" id="P0Z-nX-AQW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
