--- a/StoryPrompt/Base.lproj/Main.storyboard
+++ b/StoryPrompt/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="Ih7-Yv-o83">
-                                <rect key="frame" x="20" y="101" width="374" height="431.5"/>
+                                <rect key="frame" x="20" y="101" width="374" height="653.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="rJP-4h-6Y8">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
@@ -98,14 +98,20 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BoxOfBooks" translatesAutoresizingMaskIntoConstraints="NO" id="mOM-gS-XMP">
+                                        <rect key="frame" x="0.0" y="305" width="374" height="200"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="mOM-gS-XMP" secondAttribute="height" multiplier="187:100" id="xoS-2D-RNK"/>
+                                        </constraints>
+                                    </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Story Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xEx-pB-8rN">
-                                        <rect key="frame" x="0.0" y="305" width="374" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="527" width="374" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="SW2-nB-1EP">
-                                        <rect key="frame" x="0.0" y="347.5" width="374" height="32"/>
+                                        <rect key="frame" x="0.0" y="569.5" width="374" height="32"/>
                                         <segments>
                                             <segment title="Sci-Fi"/>
                                             <segment title="Horror"/>
@@ -115,7 +121,7 @@
                                         </connections>
                                     </segmentedControl>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Qb-OX-npW">
-                                        <rect key="frame" x="0.0" y="400.5" width="374" height="31"/>
+                                        <rect key="frame" x="0.0" y="622.5" width="374" height="31"/>
                                         <color key="tintColor" systemColor="labelColor"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Generate Story Prompt"/>
@@ -139,6 +145,7 @@
                         <outlet property="nounTextField" destination="hZ4-4p-Q5R" id="97a-uo-gT2"/>
                         <outlet property="numberLabel" destination="69z-YX-rWc" id="G8g-Se-DbK"/>
                         <outlet property="numberSlider" destination="mwb-Xs-zj6" id="TVc-m2-Qgw"/>
+                        <outlet property="storyPromptImageView" destination="mOM-gS-XMP" id="csL-66-5gu"/>
                         <outlet property="verbTextField" destination="3h1-Pk-9ST" id="P0Z-nX-AQW"/>
                     </connections>
                 </viewController>
@@ -150,6 +157,7 @@
     <resources>
         <image name="10.circle" catalog="system" width="128" height="121"/>
         <image name="5.circle" catalog="system" width="128" height="121"/>
+        <image name="BoxOfBooks" width="1000" height="1000"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
